# cspec

./: CMakeLists.txt  README.md  build.sh  cspec.c  cspec.h
tst/: cspec_spec.c  test_main.c
web/: index.html
web/js/: main.js
